# Beispielanwendung Adressbuch/Backend/src/api/openapi.yaml
@@ -53,7 +53,6 @@ paths:
                 items:
                   $ref: '#/components/schemas/Address'
                 x-content-type: application/json
-      x-swagger-router-controller: Adresse
     post:
       tags:
       - Adresse
@@ -70,13 +69,16 @@ paths:
       responses:
         "201":
           description: Created
+          headers:
+            Location:
+              schema:
+                type: string
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/Address'
         "400":
           description: Bad Request (Vorname oder Nachname fehlt)
-      x-swagger-router-controller: Adresse
   /address/{id}:
     get:
       tags:
@@ -101,7 +103,6 @@ paths:
                 $ref: '#/components/schemas/Address'
         "404":
           description: Not Found
-      x-swagger-router-controller: Adresse
     put:
       tags:
       - Adresse
@@ -130,11 +131,8 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Address'
-        "400":
-          description: Bad Request (Vorname oder Nachname fehlt)
         "404":
           description: Not Found
-      x-swagger-router-controller: Adresse
     delete:
       tags:
       - Adresse
@@ -154,7 +152,6 @@ paths:
           description: OK
         "404":
           description: Not Found
-      x-swagger-router-controller: Adresse
     patch:
       tags:
       - Adresse
@@ -181,16 +178,14 @@ paths:
           description: OK
         "404":
           description: Not Found
-      x-swagger-router-controller: Adresse
 components:
   schemas:
     Address:
       title: Adresse
       type: object
       properties:
-        id:
+        _id:
           type: string
-          readOnly: true
         first_name:
           type: string
         last_name:
@@ -199,11 +194,14 @@ components:
           type: string
         email:
           type: string
-          format: email
+          pattern: "(.*@.*\\..*)?"
+      required:
+        - first_name
+        - last_name
       example:
-        phone: phone
-        last_name: last_name
-        id: id
-        first_name: first_name
-        email: ""
+        _id: "621ff9a936997df5baba746e"
+        first_name: "Fox"
+        last_name: "Mulder"
+        email: "mulder@xfiles.com"
+        phone: "+49 721 553181"
   securitySchemes: {}
